# mhysa

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  README  README.md  VERSION  configure.ac
Examples/: README
include/: io.h  (+20 more)
src/: Examples.md  Makefile.am  main.c
src/AdvectionDiffusionReaction/: LinearADRAdvection.c  LinearADRCleanup.c  LinearADRComputeCFL.c  LinearADRComputeDiffNumber.c  LinearADRDiffusion.c  LinearADRInitialize.c  LinearADRReaction.c  LinearADRUpwind.c  Makefile.am
src/ArrayFunctions/: ArrayAXPY.c  ArrayAdd1D.c  ArrayCopy1D.c  ArrayCopynD.c  ArrayImplementations.c  ArrayIncrementIndex.c  ArrayIndex1D.c  ArrayMaxnD.c  ArraySetValue.c  ArraySubtract1D.c  ArraySumAbsnD.c  ArraySumSquarenD.c  Makefile.am
src/BandedMatrix/: BandedMatrixCreate.c  BandedMatrixDestroy.c  BandedMatrixInitialize.c  BandedMatrixPreallocate.c  Makefile.am
src/BoundaryConditions/: BCCleanup.c  BCDirichlet.c  BCExtrapolate.c  BCInitialize.c  BCNoFlux.c  BCNoslipWall.c  BCPeriodic.c  BCReflect.c  BCSWSlipWall.c  BCSlipWall.c  BCSponge.c  BCSubsonicAmbivalent.c  BCSubsonicInflow.c  BCSubsonicOutflow.c  BCSupersonicInflow.c  BCSupersonicOutflow.c  BCTurbulentSupersonicInflow.c  Makefile.am
src/CoreFunctions/: ApplyBoundaryConditions.c  BoundaryIntegral.c  CalculateConservationError.c  Cleanup.c  ComputeRHSOperators.c  ExactSolution.c  HyperbolicFunction.c  InitialSolution.c  InitializeBoundaries.c  InitializePhysics.c  InitializeSolvers.c  Makefile.am  NonLinearInterpolation.c  ParabolicFunctionCons1Stage.c  ParabolicFunctionNC1Stage.c  ReadInputs.c  Solve.c  SolvePETSc.c  SourceFunction.c
src/FirstDerivative/: FirstDerivativeFirstOrder.c  FirstDerivativeFourthOrder.c  FirstDerivativeSecondOrder.c  Makefile.am
src/HyParFunctions/: ApplyBoundaryConditions.c  ApplyIBConditions.c  BoundaryIntegral.c  CalculateConservationError.c  CalculateError.c  Cleanup.c  ComputeRHSOperators.c  ExactSolution.c  GetCoordinate.c  HyperbolicFunction.c  IncrementFilename.c  InitialSolution.c  Initialize.c  InitializeBoundaries.c  InitializeImmersedBoundaries.c  InitializePhysics.c  InitializeSolvers.c  Makefile.am  NonLinearInterpolation.c  OutputSolution.c  ParabolicFunction.c  ParabolicFunctionCons1Stage.c  ParabolicFunctionNC1.5Stage.c  ParabolicFunctionNC1Stage.c  ParabolicFunctionNC2Stage.c  ReadArray.c  ReadInputs.c  ReconstructHyperbolic.c  Solve.c  SolvePETSc.c  SourceFunction.c  VolumeIntegral.c  WriteArray.c  WriteBinary.c  WriteTecplot2D.c  WriteTecplot3D.c  WriteText.c
src/IOFunctions/: Makefile.am  ReadArray.c  WriteArray.c  WriteBinary.c  WriteTecplot2D.c  WriteTecplot3D.c  WriteText.c
src/ImmersedBoundaries/: IBAssembleGlobalFacetData.c  IBCleanup.c  IBComputeBoundingBox.c  IBComputeFacetVar.c  IBComputeNormalGradient.c  IBCreateFacetMapping.c  IBIdentifyBody.c  IBIdentifyBoundary.c  IBIdentifyMode.c  IBInterpCoeffs.c  IBNearestFacetNormal.c  IBReadBodySTL.c  IBWriteBodySTL.c  Makefile.am
src/InterpolationFunctions/: CompactSchemeCleanup.c  CompactSchemeInitialize.c  FifthOrderWENO.c  FirstOrderUpwind.c  Interp1PrimFifthOrderCRWENO.c  Interp1PrimFifthOrderCRWENOChar.c  Interp1PrimFifthOrderCompactUpwind.c  Interp1PrimFifthOrderCompactUpwindChar.c  Interp1PrimFifthOrderHCWENO.c  Interp1PrimFifthOrderHCWENOChar.c  Interp1PrimFifthOrderNonUniformWENO.c  Interp1PrimFifthOrderUpwind.c  Interp1PrimFifthOrderUpwindChar.c  Interp1PrimFifthOrderWENO.c  Interp1PrimFifthOrderWENO1U.c  Interp1PrimFifthOrderWENO1UChar.c  Interp1PrimFifthOrderWENOChar.c  Interp1PrimFirstOrderUpwind.c  Interp1PrimFirstOrderUpwindChar.c  Interp1PrimSecondOrderCentral.c  Interp1PrimSecondOrderCentralChar.c  Interp1PrimThirdOrderMUSCL.c  Interp1PrimThirdOrderMUSCLChar.c  Interp2PrimSecondOrder.c  InterpSetLimiterVar.c  MUSCLInitialize.c  Makefile.am  WENOCleanup.c  WENOFifthOrderCalculateWeights.c  WENOFifthOrderCalculateWeightsChar.c  WENOFifthOrderInitializeWeights.c  WENOInitialize.c
src/LinearADR/: LinearADRAdvection.c  LinearADRCleanup.c  LinearADRComputeCFL.c  LinearADRComputeDiffNumber.c  LinearADRDiffusion.c  LinearADRInitialize.c  Makefile.am
src/MPIFunctions/: MPIBroadcast.c  MPICommunicators.c  MPIExchangeBoundaries.c  MPIExchangeBoundaries1D.c  MPIExchangeBoundariesnD.c  MPIGatherArray1D.c  MPIGatherArraynD.c  MPIGetArrayDatanD.c  MPIGetFilename.c  MPIIOGroups.c  MPILocalDomainLimits.c  MPIMax.c  MPIMin.c  MPIPartition1D.c  MPIPartitionArray1D.c  MPIPartitionArraynD.c  MPIRank1D.c  MPIRanknD.c  MPISum.c  Makefile.am
src/MathFunctions/: BasicFunctions.c  FindInterval.c  Makefile.am  MatMult.c  MatVecMult.c  TrilinearInterpolation.c
src/PETScFunctions/: Makefile.am  PetscCleanup.c  PetscComputePreconMatIMEX.c  PetscComputePreconMatImpl.c  PetscComputeRHSOperators.c  PetscCreatePointList.c  PetscError.c  PetscGlobalDOF.c  PetscIFunctionIMEX.c  PetscIJacobian.c  PetscIJacobianIMEX.c  PetscPostStage.c  PetscPostTimeStep.c  PetscPreStage.c  PetscPreTimeStep.c  PetscRHSFunctionExpl.c  PetscRHSFunctionIMEX.c  PetscRHSFunctionImpl.c  PetscRHSJacobian.c  PetscRHSJacobianImpl.c  PetscRegisterTIMethods.c  TransferFromPETSc.c  TransferToPETSc.c
src/PhysicalModels/: Makefile.am
src/PhysicalModels/Euler1D/: Euler1DCleanup.c  Euler1DComputeCFL.c  Euler1DEigen.c  Euler1DFlux.c  Euler1DFunctions.c  Euler1DGravityField.c  Euler1DInitialize.c  Euler1DJacobian.c  Euler1DModifiedSolution.c  Euler1DPreStage.c  Euler1DPreStep.c  Euler1DSource.c  Euler1DSourceUpwind.c  Euler1DUpwind.c  Makefile.am
src/SecondDerivative/: Makefile.am  SecondDerivativeFourthOrder.c  SecondDerivativeSecondOrder.c
src/TimeIntegration/: Makefile.am  TimeCleanup.c  TimeError.c  TimeExplicitRKCleanup.c  TimeExplicitRKInitialize.c  TimeForwardEuler.c  TimeGLMGEE.c  TimeGLMGEECleanup.c  TimeGLMGEEInitialize.c  TimeGetAuxSolutions.c  TimeInitialize.c  TimeMSTICleanup.c  TimeMSTIInitialize.c  TimePostStep.c  TimePreStep.c  TimePrintStep.c  TimeRHSFunctionExplicit.c  TimeRK.c  TimeStep.c
src/TridiagLU/: Makefile.am  blocktridiagIterJacobi.c  blocktridiagLU.c  tridiagIterJacobi.c  tridiagLU.c  tridiagLUGS.c  tridiagLUInit.c  tridiagScaLPK.c
(+846 files in other folders)
