noinst_LIBRARIES = libBoundaryConditions.a
libBoundaryConditions_a_SOURCES = \
  BCCleanup.c \
  BCDirichlet.c \
  BCExtrapolate.c \
  BCInitialize.c \
  BCNoslipWall.c \
  BCPeriodic.c \
  BCReflect.c \
	BCSubsonicInflow.c \
	BCSubsonicOutflow.c \
	BCSupersonicInflow.c \
	BCSupersonicOutflow.c \
  BCSlipWall.c 
