noinst_LIBRARIES = libCoreFunctions.a
libCoreFunctions_a_SOURCES = \
  ApplyBoundaryConditions.c \
  ApplyIBConditions.c \
  BoundaryIntegral.c \
  CalculateError.c \
  CalculateConservationError.c \
  Cleanup.c \
	ComputeRHSOperators.c \
  ExactSolution.c \
  HyperbolicFunction.c \
  IncrementFilename.c \
  Initialize.c \
  InitialSolution.c \
  InitializeBoundaries.c \
  InitializeImmersedBoundaries.c \
  InitializePhysics.c \
  InitializeSolvers.c \
  NonLinearInterpolation.c \
  OutputSolution.c \
  ParabolicFunctionCons1Stage.c \
  ParabolicFunctionNC1Stage.c \
  ParabolicFunctionNC2Stage.c \
  ParabolicFunctionNC1.5Stage.c \
  ReadInputs.c \
  Solve.c \
  SolvePETSc.c \
  SourceFunction.c \
  VolumeIntegral.c
