noinst_LIBRARIES = libHyParFunctions.a
libHyParFunctions_a_SOURCES = \
  ApplyBoundaryConditions.c \
  CalculateError.c \
  Cleanup.c \
  HyperbolicFunction.c \
  Initialize.c \
  InitialSolution.c \
  InitializeBoundaries.c \
  InitializePhysics.c \
  InitializeSolvers.c \
  OutputSolution.c \
  ParabolicFunctionCons1Stage.c \
  ParabolicFunctionNC1Stage.c \
  ReadInputs.c \
  ReconstructHyperbolic.c \
  Solve.c \
  SourceFunction.c \
  WriteBinary.c \
  WriteTecplot2D.c \
  WriteTecplot3D.c \
  WriteText.c
