noinst_LIBRARIES = libHyParFunctions.a
libHyParFunctions_a_SOURCES = \
  ApplyBoundaryConditions.c \
  BoundaryIntegral.c \
  CalculateError.c \
  CalculateConservationError.c \
  Cleanup.c \
  ExactSolution.c \
  HyperbolicFunction.c \
  Initialize.c \
  InitialSolution.c \
  InitializeBoundaries.c \
  InitializePhysics.c \
  InitializeSolvers.c \
  NonLinearInterpolation.c \
  OutputSolution.c \
  ParabolicFunctionCons1Stage.c \
  ParabolicFunctionNC1Stage.c \
  ParabolicFunctionNC2Stage.c \
  ReadInputs.c \
  Solve.c \
  SolvePETSc.c \
  SourceFunction.c \
  VolumeIntegral.c \
  WriteBinary.c \
  WriteTecplot2D.c \
  WriteTecplot3D.c \
  WriteText.c
