noinst_LIBRARIES = libImmersedBoundaries.a
libImmersedBoundaries_a_SOURCES = \
  IBCleanup.c \
  IBComputeBoundingBox.c \
  IBCreateFacetMapping.c \
  IBIdentifyBody.c \
  IBIdentifyBoundary.c \
  IBIdentifyMode.c \
  IBInterpCoeffs.c \
  IBNearestFacetNormal.c \
  IBReadBodySTL.c \
  IBWriteBodySTL.c
