noinst_LIBRARIES = libImmersedBoundaries.a
libImmersedBoundaries_a_SOURCES = \
	IBAssembleGlobalFacetData.c \
  IBCleanup.c \
  IBComputeBoundingBox.c \
  IBComputeFacetVar.c \
  IBComputeNormalGradient.c \
  IBCreateFacetMapping.c \
  IBIdentifyBody.c \
  IBIdentifyBoundary.c \
  IBIdentifyMode.c \
  IBInterpCoeffs.c \
  IBNearestFacetNormal.c \
  IBReadBodySTL.c \
  IBWriteBodySTL.c
