noinst_LIBRARIES = libInterpolationFunctions.a
libInterpolationFunctions_a_SOURCES = \
  Interp1PrimFifthOrderCRWENO.c \
  Interp1PrimFifthOrderCRWENOChar.c \
  Interp1PrimFifthOrderHCWENO.c \
  Interp1PrimFifthOrderHCWENOChar.c \
  Interp1PrimFirstOrderUpwind.c \
  Interp1PrimFirstOrderUpwindChar.c \
  Interp1PrimThirdOrderMUSCL.c \
  Interp1PrimThirdOrderMUSCLChar.c \
  Interp1PrimFifthOrderWENO.c \
  Interp1PrimFifthOrderWENOChar.c \
  Interp2PrimSecondOrder.c \
  InterpSetLimiterVar.c \
  MUSCLInitialize.c \
  WENOCleanup.c \
  WENOFifthOrderCalculateWeights.c \
  WENOFifthOrderCalculateWeightsChar.c \
  WENOInitialize.c
