noinst_LIBRARIES = libInterpolationFunctions.a
libInterpolationFunctions_a_SOURCES = \
  Interp1PrimFifthOrderCRWENO.c \
  Interp1PrimFifthOrderCRWENOChar.c \
  Interp1PrimFifthOrderCompactUpwind.c \
  Interp1PrimFifthOrderCompactUpwindChar.c \
  Interp1PrimFifthOrderHCWENO.c \
  Interp1PrimFifthOrderHCWENOChar.c \
  Interp1PrimFifthOrderUpwind.c \
  Interp1PrimFifthOrderUpwindChar.c \
  Interp1PrimFifthOrderWENO.c \
  Interp1PrimFifthOrderWENOChar.c \
  Interp1PrimFirstOrderUpwind.c \
  Interp1PrimFirstOrderUpwindChar.c \
  Interp1PrimThirdOrderMUSCL.c \
  Interp1PrimThirdOrderMUSCLChar.c \
  Interp1PrimSecondOrderCentral.c \
  Interp1PrimSecondOrderCentralChar.c \
  Interp2PrimSecondOrder.c \
  CompactSchemeCleanup.c \
  CompactSchemeInitialize.c \
  MUSCLInitialize.c \
  WENOCleanup.c \
  WENOFifthOrderCalculateWeights.c \
  WENOFifthOrderInitializeWeights.c \
  WENOInitialize.c
