noinst_LIBRARIES = libMPIFunctions.a
libMPIFunctions_a_SOURCES = \
  MPIBroadcast.c \
  MPIGatherArray1D.c \
  MPIGatherArraynD.c \
  MPIGetArrayDatanD.c \
  MPILocalDomainLimits.c \
  MPIMax.c \
  MPIPartition1D.c \
  MPIPartitionArray1D.c \
  MPIPartitionArraynD.c \
  MPIRank1D.c \
  MPIRanknD.c \
  MPISum.c
