noinst_LIBRARIES = libPETScFunctions.a
libPETScFunctions_a_SOURCES = \
  PetscComputeRHSOperators.c \
  PetscIFunctionIMEX.c \
  PetscIJacobianIMEX.c \
  PetscPostStage.c \
  PetscPostTimeStep.c \
  PetscPreStage.c \
  PetscPreTimeStep.c \
  PetscRegisterTIMethods.c \
  PetscRHSFunctionExpl.c \
  PetscRHSFunctionIMEX.c \
  TransferFromPETSc.c \
  TransferToPETSc.c
