noinst_LIBRARIES = libPETScFunctions.a
libPETScFunctions_a_SOURCES = \
  PetscCleanup.c \
  PetscComputeRHSOperators.c \
  PetscComputePreconMatIMEX.c \
  PetscComputePreconMatImpl.c \
  PetscCreatePointList.c \
  PetscGlobalDOF.c \
  PetscError.c \
  PetscIJacobian.c \
  PetscIFunctionIMEX.c \
  PetscIJacobianIMEX.c \
  PetscPostStage.c \
  PetscPostTimeStep.c \
  PetscPreStage.c \
  PetscPreTimeStep.c \
  PetscRegisterTIMethods.c \
  PetscRHSFunctionExpl.c \
  PetscRHSFunctionImpl.c \
  PetscRHSFunctionIMEX.c \
  TransferFromPETSc.c \
  TransferToPETSc.c
