noinst_LIBRARIES = libTimeIntegration.a
libTimeIntegration_a_SOURCES = \
  TimeCleanup.c \
  TimeInitialize.c \
  TimeExplicitRKCleanup.c \
  TimeExplicitRKInitialize.c \
  TimePreStep.c \
  TimePostStep.c \
  TimePrintStep.c \
  TimeRHSFunctionExplicit.c \
  TimeStep.c \
  TimeForwardEuler.c \
  TimeRK.c
