noinst_LIBRARIES = libTimeIntegration.a
libTimeIntegration_a_SOURCES = \
  TimeCleanup.c \
  TimeInitialize.c \
  TimeError.c \
  TimeExplicitRKCleanup.c \
  TimeExplicitRKInitialize.c \
  TimeGLMGEECleanup.c \
  TimeGLMGEEInitialize.c \
  TimeGetAuxSolutions.c \
  TimePreStep.c \
  TimePostStep.c \
  TimePrintStep.c \
  TimeRHSFunctionExplicit.c \
  TimeStep.c \
  TimeForwardEuler.c \
  TimeGLMGEE.c \
  TimeRK.c
