noinst_LIBRARIES = libTridiagLU.a
libTridiagLU_a_SOURCES = blocktridiagLU.c \
                         blocktridiagIterJacobi.c \
												 tridiagLU.c \
                         tridiagLUGS.c \
                         tridiagIterJacobi.c \
												 tridiagScaLPK.c \
                         tridiagLUInit.c
