noinst_LIBRARIES = libEuler1D.a
libEuler1D_a_SOURCES = \
  Euler1DCleanup.c \
  Euler1DComputeCFL.c \
  Euler1DEigen.c \
  Euler1DFlux.c \
  Euler1DFunctions.c \
	Euler1DGravityField.c \
  Euler1DInitialize.c \
  Euler1DJacobian.c \
  Euler1DModifiedSolution.c \
  Euler1DPreStep.c \
	Euler1DSource.c \
	Euler1DSourceUpwind.c \
  Euler1DUpwind.c
