noinst_LIBRARIES = libFPDoubleWell.a
libFPDoubleWell_a_SOURCES = \
  FPDoubleWellAdvection.c \
  FPDoubleWellCleanup.c \
  FPDoubleWellComputeCFL.c \
  FPDoubleWellComputeDiffNumber.c \
  FPDoubleWellDiffusion.c \
  FPDoubleWellInitialize.c \
  FPDoubleWellPostStep.c \
  FPDoubleWellPrintStep.c \
  FPDoubleWellUpwind.c
