noinst_LIBRARIES = libFPPowerSystem.a
libFPPowerSystem_a_SOURCES = \
  FPPowerSystemAdvection.c \
  FPPowerSystemCleanup.c \
  FPPowerSystemComputeCFL.c \
  FPPowerSystemComputeDiffNumber.c \
  FPPowerSystemDiffusion.c \
  FPPowerSystemFunctions.c \
  FPPowerSystemInitialize.c \
  FPPowerSystemPostStep.c \
  FPPowerSystemPrintStep.c \
  FPPowerSystemUpwind.c
