noinst_LIBRARIES = libFPPowerSystem1Bus.a
libFPPowerSystem1Bus_a_SOURCES = \
  FPPowerSystem1BusAdvection.c \
  FPPowerSystem1BusCleanup.c \
  FPPowerSystem1BusComputeCFL.c \
  FPPowerSystem1BusComputeDiffNumber.c \
  FPPowerSystem1BusDiffusion.c \
  FPPowerSystem1BusFunctions.c \
  FPPowerSystem1BusInitialize.c \
  FPPowerSystem1BusPostStep.c \
  FPPowerSystem1BusPrintStep.c \
  FPPowerSystem1BusUpwind.c
