noinst_LIBRARIES = libFPPowerSystem3Bus.a
libFPPowerSystem3Bus_a_SOURCES = \
  FPPowerSystem3BusAdvection.c \
  FPPowerSystem3BusCleanup.c \
  FPPowerSystem3BusComputeCFL.c \
  FPPowerSystem3BusComputeDiffNumber.c \
  FPPowerSystem3BusDiffusion.c \
  FPPowerSystem3BusFunctions.c \
  FPPowerSystem3BusInitialize.c \
  FPPowerSystem3BusUpwind.c
