noinst_LIBRARIES = libNavierStokes2D.a
libNavierStokes2D_a_SOURCES = \
  NavierStokes2DCleanup.c \
  NavierStokes2DComputeCFL.c \
  NavierStokes2DEigen.c \
  NavierStokes2DFlux.c \
  NavierStokes2DFunctions.c \
  NavierStokes2DInitialize.c \
	NavierStokes2DParabolicFunction.c \
  NavierStokes2DUpwind.c
