noinst_LIBRARIES = libNavierStokes2D.a
libNavierStokes2D_a_SOURCES = \
  NavierStokes2DCleanup.c \
  NavierStokes2DComputeCFL.c \
  NavierStokes2DEigen.c \
  NavierStokes2DFlux.c \
  NavierStokes2DFunctions.c \
	NavierStokes2DGravityField.c \
  NavierStokes2DInitialize.c \
  NavierStokes2DJacobian.c \
	NavierStokes2DModifiedSolution.c \
	NavierStokes2DParabolicFunction.c \
	NavierStokes2DPostStage.c \
	NavierStokes2DPreStep.c \
	NavierStokes2DSource.c \
  NavierStokes2DUpwind.c
