noinst_LIBRARIES = libNavierStokes3D.a
libNavierStokes3D_a_SOURCES = \
  NavierStokes3DCleanup.c \
  NavierStokes3DComputeCFL.c \
  NavierStokes3DEigen.c \
  NavierStokes3DFlux.c \
  NavierStokes3DFunctions.c \
  NavierStokes3DGravityField.c \
  NavierStokes3DInitialize.c \
  NavierStokes3DModifiedSolution.c \
  NavierStokes3DParabolicFunction.c \
  NavierStokes3DSource.c \
  NavierStokes3DUpwind.c
