noinst_LIBRARIES = libShallowWater1D.a
libShallowWater1D_a_SOURCES = \
  ShallowWater1DCleanup.c \
  ShallowWater1DComputeCFL.c \
  ShallowWater1DEigen.c \
  ShallowWater1DFlux.c \
  ShallowWater1DFunctions.c \
  ShallowWater1DInitialize.c \
  ShallowWater1DJacobian.c \
  ShallowWater1DModifiedSolution.c \
	ShallowWater1DSource.c \
	ShallowWater1DSourceUpwind.c \
	ShallowWater1DTopography.c \
  ShallowWater1DUpwind.c \
  ShallowWater1DWriteTopography.c
