noinst_LIBRARIES = libShallowWater2D.a
libShallowWater2D_a_SOURCES = \
  ShallowWater2DCleanup.c \
  ShallowWater2DComputeCFL.c \
  ShallowWater2DEigen.c \
  ShallowWater2DFlux.c \
  ShallowWater2DFunctions.c \
  ShallowWater2DInitialize.c \
  ShallowWater2DJacobian.c \
  ShallowWater2DModifiedSolution.c \
	ShallowWater2DSource.c \
	ShallowWater2DSourceUpwind.c \
	ShallowWater2DTopography.c \
  ShallowWater2DUpwind.c \
  ShallowWater2DWriteTopography.c
